--- a/library-management-system/src/main/resources/application.properties
+++ b/library-management-system/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://PostgreSQL:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
