--- a/library-management-system/Dockerfile
+++ b/library-management-system/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:19-jdk-alpine
+FROM openjdk:21-jdk
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} library-management-system.jar
 ENTRYPOINT ["java","-jar","/library-management-system.jar"]
