--- a/library-management-system/src/main/resources/application.properties
+++ b/library-management-system/src/main/resources/application.properties
@@ -10,5 +10,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.thymeleaf.template-resolver-order=0
 
 server.error.whitelabel.enabled=false
-
+spring.mail.host=mailhog  
+spring.mail.port=1025  
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false  
+spring.mail.properties.mail.smtp.starttls.enable=false
 
